--- a/css/main.css
+++ b/css/main.css
@@ -73,10 +73,11 @@ body {
 }
 .right-nav button {
     border-radius: 50%;
-    background-color: red;
+    background-color:#609;
     border: none;
     width: 3em;
     height: 3em;
+    color: white;
 }
 .right-nav button a {
     color: white;
